# monday-summary-app

./: .gitignore  README.md  pyproject.toml  sample-output.html  summary.html  summary.py
monday_summary_app/: __init__.py  __main__.py  cli.py
monday_summary_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
