[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "monday-summary-app"
version = "0.1.0"
description = "CLI app for summarizing a monday.com board"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
monday-summary = "monday_summary_app.cli:main"
